# communication_nearlink_service

./: OAT.xml  README.OpenSource  README.md  README_zh.md  bundle.json  hisysevent.yaml  hisysevent_ue.yaml  nearlink_config.gni  nearlink_feature.gni
frameworks/native/: BUILD.gn  nearlink_ASC_source.cpp  nearlink_cdsm_client.cpp  nearlink_hid_host.cpp  nearlink_host.cpp  nearlink_host_load_callback.cpp  nearlink_host_load_callback.h  nearlink_remote_device.cpp  nearlink_sa_manager.cpp  nearlink_sle_advertiser.cpp  nearlink_sle_controller.cpp  nearlink_sle_datatransfer.cpp  nearlink_sle_ranging.cpp  nearlink_sle_scanner.cpp  nearlink_ssap_client.cpp  nearlink_ssap_descriptor.cpp  nearlink_ssap_event.cpp  nearlink_ssap_method.cpp  nearlink_ssap_property.cpp  nearlink_ssap_server.cpp  nearlink_ssap_service.cpp  nearlink_switch_module.cpp  nearlink_switch_module.h  nearlink_tws_client.cpp  nearlink_uuid.cpp  nearlink_vcp_client.cpp
frameworks/native/include/: nearlink_sa_manager.h
ipc_parcel/: BUILD.gn
ipc_parcel/interface/: i_nearlink_asc.h  i_nearlink_asc_callback.h  i_nearlink_cdsm_client.h  i_nearlink_cdsm_client_callback.h  i_nearlink_cloud_pair.h  i_nearlink_device_battery_observer.h  i_nearlink_device_rssi_observer.h  i_nearlink_hadm_client.h  i_nearlink_hadm_client_callback.h  i_nearlink_hid_host.h  i_nearlink_host.h  i_nearlink_host_observer.h  i_nearlink_sle_advertise_callback.h  i_nearlink_sle_advertiser.h  i_nearlink_sle_central_manager.h  i_nearlink_sle_central_manager_callback.h  i_nearlink_sle_controller.h  i_nearlink_sle_datatransfer.h  i_nearlink_sle_datatransfer_callback.h  i_nearlink_sle_peripheral_observer.h  i_nearlink_ssap_client.h  i_nearlink_ssap_client_callback.h  i_nearlink_ssap_server.h  i_nearlink_ssap_server_callback.h  i_nearlink_tws_client.h  i_nearlink_tws_client_observer.h  i_nearlink_vcp_client.h  nearlink_service_ipc_interface_code.h
ipc_parcel/parcel/: nearlink_asc_audio_control_result.cpp  nearlink_asc_audio_control_result.h  nearlink_asc_audio_stream_info.cpp  nearlink_asc_audio_stream_info.h  nearlink_cdsm_info_parcel.cpp  nearlink_cdsm_info_parcel.h  nearlink_cloud_pair_device.cpp  nearlink_cloud_pair_device.h  nearlink_device_information_parcel.cpp  nearlink_device_information_parcel.h  nearlink_device_model_parcel.cpp  nearlink_device_model_parcel.h  nearlink_hadm_client_sounding_result.cpp  nearlink_hadm_client_sounding_result.h  nearlink_raw_address.cpp  nearlink_raw_address.h  nearlink_sle_advertiser_data.cpp  nearlink_sle_advertiser_data.h  nearlink_sle_advertiser_settings.cpp  nearlink_sle_advertiser_settings.h  nearlink_sle_datatransfer_connection_params.cpp  nearlink_sle_datatransfer_connection_params.h  nearlink_sle_scan_filter.cpp  nearlink_sle_scan_filter.h  nearlink_sle_scan_result.cpp  nearlink_sle_scan_result.h  nearlink_sle_scan_settings.cpp  nearlink_sle_scan_settings.h  nearlink_ssap_descriptor_parcel.cpp  nearlink_ssap_descriptor_parcel.h  nearlink_ssap_device.cpp  nearlink_ssap_device.h  nearlink_ssap_event_parcel.cpp  nearlink_ssap_event_parcel.h  nearlink_ssap_method_parcel.cpp  nearlink_ssap_method_parcel.h  nearlink_ssap_property_parcel.cpp  nearlink_ssap_property_parcel.h  nearlink_ssap_service_parcel.cpp  nearlink_ssap_service_parcel.h  (+2 more)
services/common/: BUILD.gn
services/common/include/: BaseDef.h  BaseObserverList.h  DynamicLibraryLoader.h  SleDefs.h  SleKiaManager.h  ThreadUtil.h  context.h  i_verification_strategy.h  message.h  nearlink_common_event_helper.h  nearlink_freeze_utils.h  nearlink_permission_item.h  nearlink_permission_manager.h  nearlink_remote_container.h  nearlink_system_ability_subscriber.h  nearlink_system_config.h  nearlink_timer.h  nearlink_verification_manager.h  parameter_manager.h  parameter_provider_interface.h  remote_observer_list.h  state_machine.h  verification_context.h  verification_type.h
services/common/src/: DynamicLibraryLoader.cpp  SleKiaManager.cpp  ThreadUtil.cpp  nearlink_common_event_helper.cpp  nearlink_freeze_utils.cpp  nearlink_permission_item.cpp  nearlink_permission_manager.cpp  nearlink_system_ability_subscriber.cpp  nearlink_system_config.cpp  nearlink_timer.cpp  nearlink_verification_manager.cpp  parameter_default_provider.cpp  parameter_default_provider.h  parameter_manager.cpp  state_machine.cpp
services/device_manager/: BUILD.gn
services/device_manager/include/: AdapterDeviceConfig.h  IManufacturerAbilityManager.h  ManufacturerAbilityLoader.h  (+8 more)
services/dft/: BUILD.gn
services/hardware/: BUILD.gn
services/hibox/: BUILD.gn
services/ipc/: BUILD.gn
services/server/: BUILD.gn  libnearlink_server.versionscript
services/service/: BUILD.gn  libnearlink_mcp_service.versionscript  libnearlink_service_impl.versionscript  libsleservice_blocklist.txt
services/stack/: BUILD.gn  libnearlink_stack.versionscript  libslestack_blocklist.txt
socket/: BUILD.gn  nearlink_datatransfer_parcel.cpp  nearlink_datatransfer_parcel.h  nearlink_socket_inputstream.cpp  nearlink_socket_inputstream.h  nearlink_socket_manager.cpp  nearlink_socket_manager.h  nearlink_socket_outputstream.cpp  nearlink_socket_outputstream.h
test/: BUILD.gn
test/fuzztest/: fuzztest.gni
test/utils/: BUILD.gn  nearlink_access_token_mock.cpp  nearlink_access_token_mock.h  nearlink_native_token_mock.cpp  nearlink_native_token_mock.h  stack_fuzz.gni  stack_tdd.gni  test_utils.gni
tools/ohos-nearlinkControl/: BUILD.gn  README.md  ohos-nearlinkControl.json
utils/: BUILD.gn
utils/include/: HidHostDefines.h  hibox_common.h  log.h  log_util.h  nearlink_advertiser_def.h  nearlink_cloud_pair_def.h  nearlink_datatransfer_def.h  nearlink_hadm_sounding_result.h  nearlink_safe_hashmap.h  nearlink_safe_list.h  nearlink_safe_map.h  nearlink_safe_set.h  nearlink_safe_weak_list.h  nearlink_scan_def.h  nearlink_utils.h  raw_address.h  sle_service_data.h  sle_uuid.h  ssap_data.h  ssap_def.h
utils/src/: log_util.cpp  nearlink_extension_manager.cpp  nearlink_hadm_sounding_result.cpp  nearlink_plugin_loader.cpp  nearlink_scan_def.cpp  nearlink_utils.cpp  raw_address.cpp  sle_service_data.cpp  sle_uuid.cpp
(+1891 files in other folders)
