# Copyright (C) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos_var.gni")
import("//out/products_ext/hmos_ext_var.gni")
import("./nearlink_feature.gni")

NEARLINK_ROOT = get_path_info(".", "abspath")

declare_args() {
  nearlink_product_watch_standard = false
  product_defines = []
  if (config_platform_type == "pc_standard" || config_platform_type == "pc_standard_2d") {
      product_defines += [ "PC_STANDARD" ]
  } else if (config_platform_type == "watch_standard" || config_platform_type == "watch_standard_lite") {
      nearlink_product_watch_standard = true
      product_defines += [ "WATCH_STANDARD" ]
  } else if (config_platform_type == "tablet_standard") {
      product_defines += [ "TABLET_STANDARD" ]
  } else if (config_platform_type == "tv_standard" || config_platform_type == "tv_standard_2d") {
      product_defines += [ "TV_STANDARD" ]
  } else if (config_platform_type == "phone_standard" || config_platform_type == "phone_standard_2d") {
      product_defines += [ "PHONE_STANDARD" ]
  }
}
