# Copyright (C) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../nearlink_config.gni")

config("nearlink_ipc_parcel_public") {
    include_dirs = [
        "$NEARLINK_ROOT/ipc_parcel/interface",
        "$NEARLINK_ROOT/ipc_parcel/parcel",
    ]
}

config("nearlink_ipc_parcel_config") {
    cflags = [
        "-fPIC",
        "-Wno-unused-parameter",
        "-Wunused-private-field",
        "-fdata-sections",
        "-ffunction-sections",
        "-fno-asynchronous-unwind-tables",
        "-fno-unwind-tables",
        "-Os",
        "-fno-exceptions",
        "-fno-rtti",
        "-flto",
    ]

    if (build_variant == "user") {
        cflags += [ "-DIS_NL_RELEASE_VERSION" ]
    }

    cflags_cc = cflags

}

ohos_shared_library("nearlink_ipc_parcel") {
    branch_protector_ret = "pac_ret"

    configs = [ ":nearlink_ipc_parcel_config" ]

    ldflags = [
        "-flto",
        "-Wl,--gc-sections",
    ]

    sanitize = {
      cfi = true                             # Enable/disable control flow integrity detection
      cfi_vcall_icall_only = true            # CFI optimization, limit CFI check scope
      boundary_sanitize = true               # Enable boundary san detection
      cfi_cross_dso = true                   # Cross-SO CFI Checks
      integer_overflow = true                # Enable integer overflow detection
      ubsan = true                           # Enable some Ubsan options
      debug = false
    }

    defines = [
        "LOG_TAG = \"nearlink_ipc_parcel\"",
        "LOG_DOMAIN = 0xD000151",
    ]

    sources = [
        "parcel/nearlink_asc_audio_control_result.cpp",
        "parcel/nearlink_asc_audio_stream_info.cpp",
        "parcel/nearlink_cdsm_info_parcel.cpp",
        "parcel/nearlink_cloud_pair_device.cpp",
        "parcel/nearlink_device_model_parcel.cpp",
        "parcel/nearlink_hadm_client_sounding_result.cpp",
        "parcel/nearlink_raw_address.cpp",
        "parcel/nearlink_sle_advertiser_data.cpp",
        "parcel/nearlink_sle_advertiser_settings.cpp",
        "parcel/nearlink_sle_datatransfer_connection_params.cpp",
        "parcel/nearlink_sle_scan_filter.cpp",
        "parcel/nearlink_sle_scan_result.cpp",
        "parcel/nearlink_sle_scan_settings.cpp",
        "parcel/nearlink_ssap_descriptor_parcel.cpp",
        "parcel/nearlink_ssap_device.cpp",
        "parcel/nearlink_ssap_event_parcel.cpp",
        "parcel/nearlink_ssap_method_parcel.cpp",
        "parcel/nearlink_ssap_property_parcel.cpp",
        "parcel/nearlink_ssap_service_parcel.cpp",
        "parcel/nearlink_uuid_parcel.cpp",
        "parcel/nearlink_device_information_parcel.cpp",
    ]

    include_dirs = [
        "$NEARLINK_ROOT/ipc_parcel/interface",
        "$NEARLINK_ROOT/ipc_parcel/parcel",
    ]

    deps = [
        "$NEARLINK_ROOT/utils:nearlink_utils",
    ]

    external_deps = [
        "c_utils:utils",
        "hilog:libhilog",
    ]

    public_configs = [":nearlink_ipc_parcel_public"]

    part_name = "nearlink_service"
    subsystem_name = "communication"
}