# Copyright (C) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../nearlink_config.gni")

config("nearlink_socket_public") {
    include_dirs = [
        "$NEARLINK_ROOT/socket",
    ]
}

config("nearlink_socket_config") {
    cflags = [
        "-fPIC",
        "-Wno-unused-parameter",
        "-Wunused-private-field",
        "-fdata-sections",
        "-ffunction-sections",
        "-fno-asynchronous-unwind-tables",
        "-fno-unwind-tables",
        "-Os",
        "-fno-exceptions",
        "-fno-rtti",
        "-flto",
    ]

    if (build_variant == "user") {
        cflags += [ "-DIS_NL_RELEASE_VERSION" ]
    }

    cflags_cc = cflags
}

ohos_shared_library("nearlink_socket") {
    branch_protector_ret = "pac_ret"

    configs = [ ":nearlink_socket_config" ]

    ldflags = [
        "-flto",
        "-Wl,--gc-sections",
    ]

    sanitize = {
      cfi = true                             # Enable/disable control flow integrity detection
      cfi_vcall_icall_only = true            # CFI optimization, limit CFI check scope
      boundary_sanitize = true               # Enable boundary san detection
      cfi_cross_dso = true                   # Cross-SO CFI Checks
      integer_overflow = true                # Enable integer overflow detection
      ubsan = true                           # Enable some Ubsan options
      debug = false
    }

    defines = [
        "LOG_TAG = \"nearlink_fwk_socket\"",
        "LOG_DOMAIN = 0xD000151",
    ]

    sources = [
        "nearlink_datatransfer_parcel.cpp",
        "nearlink_socket_inputstream.cpp",
        "nearlink_socket_manager.cpp",
        "nearlink_socket_outputstream.cpp",
    ]

    include_dirs = [ 
        "$NEARLINK_ROOT/socket",
     ]

    deps = [
        "$NEARLINK_ROOT/utils:nearlink_utils",
    ]

    external_deps = [
        "c_utils:utils",
        "hilog:libhilog",
    ]

    public_configs = [":nearlink_socket_public"]

    part_name = "nearlink_service"
    subsystem_name = "communication"
}