# Copyright (C) 2023-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos_var.gni")
import("../nearlink_config.gni")

CommonSrc = [
    "src/raw_address.cpp",
    "src/nearlink_scan_def.cpp",
    "src/sle_service_data.cpp",
    "src/sle_uuid.cpp",
    "src/nearlink_hadm_sounding_result.cpp",
    "src/nearlink_utils.cpp",
    "src/log_util.cpp",
]

config("nearlink_utils_public") {
  include_dirs = [
    "include",
    "$NEARLINK_ROOT/interfaces/inner_api/include",
    "$NEARLINK_ROOT/interfaces/def",
    "$NEARLINK_ROOT/services/stack/src/dli/interface",
    "$NEARLINK_ROOT/services/stack/src/sdf/interface",
    "$NEARLINK_ROOT/services/stack/include/ext",
    "$NEARLINK_ROOT/services/service/include",
  ]
}

config("nearlink_utils_config") {
  cflags = [
    "-fPIC",
    "-Wno-unused-parameter",
    "-Wunused-private-field",
    "-fdata-sections",
    "-ffunction-sections",
    "-fno-asynchronous-unwind-tables",
    "-fno-unwind-tables",
    "-Os",
    "-fno-exceptions",
    "-fno-rtti",
    "-flto",
  ]

  if (build_variant == "user") {
    cflags += [ "-DIS_NL_RELEASE_VERSION" ]
  }

  cflags_cc = cflags

  include_dirs = [
    "include",
    "$NEARLINK_ROOT/interfaces/inner_api/include",
    "$NEARLINK_ROOT/interfaces/def",
  ]
}

ohos_shared_library("nearlink_utils") {

  branch_protector_ret = "pac_ret"  # Enable PAC CFI
  configs = [ ":nearlink_utils_config" ]

  ldflags = [
    "-flto",
    "-Wl,--gc-sections",
  ]

  sanitize = {
    cfi = true                             # Enable/disable control flow integrity detection
    cfi_vcall_icall_only = true            # CFI optimization, limit CFI check scope
    boundary_sanitize = true               # Enable boundary san detection
    cfi_cross_dso = true                   # Cross-SO CFI Checks
    integer_overflow = true                # Enable integer overflow detection
    ubsan = true                           # Enable some Ubsan options
    debug = false
  }

  defines =  [
    "LOG_TAG = \"nearlink_utils\"",
    "LOG_DOMAIN = 0xD000151",
  ]

  sources = []
  sources += CommonSrc

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
  ]

  public_configs = [":nearlink_utils_public"]

  part_name = "nearlink_service"
  innerapi_tags = [ "platformsdk" ]
  subsystem_name = "communication"
}
