# Copyright (C) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../../nearlink_config.gni")

service_cflags = [
    "-fPIC",
    "-Wno-format",
    "-Wno-pessimizing-move",
    "-Wno-unused-parameter",
    "-Wreorder",
    "-Wmissing-braces",
    "-Wimplicit-fallthrough",
    "-Wlogical-op-parentheses",
    "-Wmissing-field-initializers",
    "-Wparentheses-equality",
    "-Wparentheses",
    "-Wdelete-non-abstract-non-virtual-dtor",
    "-Wignored-qualifiers",
    "-Wdelete-abstract-non-virtual-dtor",
    "-Wuninitialized",
    "-Woverloaded-virtual",
    "-Wdangling-else",
    "-Woverloaded-virtual",
    "-Wno-non-c-typedef-for-linkage",
    "-Wno-unused-but-set-variable",
    "-Wno-array-parameter",
    "-Wno-unused-lambda-capture",
    "-fdata-sections",
    "-ffunction-sections",
    "-fno-asynchronous-unwind-tables",
    "-fno-unwind-tables",
    "-Os",
    "-fno-exceptions",
    "-fno-rtti",
    "-flto",
  ]

########################### nearlink_service_common ###############################
config("nearlink_service_common_config") {
  cflags = service_cflags

  if (build_variant == "user") {
    cflags += [ "-DIS_NL_RELEASE_VERSION" ]
  }

  cflags_cc = cflags

  include_dirs = [
    "include",
    "$NEARLINK_ROOT/services/stack/src/sdf/interface",
    "$NEARLINK_ROOT/services/stack/src/nai/api/include/common",
  ]
}

config("nearlink_service_common_public_config") {
  include_dirs = [
      "include",
  ]
}

ohos_shared_library("nearlink_service_common") {
  branch_protector_ret = "pac_ret"  # Enable PAC CFI
  stack_protector_ret = false
  
  ldflags = [
    "-flto",
    "-Wl,--gc-sections",
  ]

  sanitize = {
      cfi = true                             # Enable/disable control flow integrity detection
      cfi_vcall_icall_only = true            # CFI optimization, limit CFI check scope
      boundary_sanitize = true               # Enable boundary san detection
      cfi_cross_dso = true                   # Cross-SO CFI Checks
      integer_overflow = true                # Enable integer overflow detection
      ubsan = true                           # Enable some Ubsan options
      debug = false
  }

  configs = [ ":nearlink_service_common_config" ]
  public_configs = [ ":nearlink_service_common_public_config" ]

  deps = [
    "$NEARLINK_ROOT/utils:nearlink_utils",
  ]

  external_deps = [
    "hilog:libhilog",
    "ability_runtime:wantagent_innerkits",
    "ffrt:libffrt",
    "qos_manager:qos",
    "access_token:libaccesstoken_sdk",
    "access_token:libtokenid_sdk",
    "access_token:libprivacy_sdk",
    "samgr:samgr_proxy",
    "safwk:system_ability_fwk",
    "ipc:ipc_single",
    "c_utils:utils",
    "ability_runtime:extension_manager", # bundle_framework
    "init:libbegetutil",
  ]

  sources = [
    "src/ThreadUtil.cpp",
    "src/DynamicLibraryLoader.cpp",
    "src/state_machine.cpp",
    "src/nearlink_timer.cpp",
    "src/nearlink_permission_item.cpp",
    "src/nearlink_permission_manager.cpp",
    "src/nearlink_verification_manager.cpp",
    "src/nearlink_system_ability_subscriber.cpp",
    "src/nearlink_common_event_helper.cpp",
    "src/parameter_manager.cpp",
    "src/parameter_default_provider.cpp",
    "src/nearlink_system_config.cpp",
  ]

  defines = [
    "LOG_TAG = \"nearlink_service_common\"",
    "LOG_DOMAIN = 0xD000152",
  ]

  if (nearlink_deps_resource_schedule_service_exist && nearlink_service_rss_background_task) {
    defines += [ "RES_SCHED_SUPPORT" ]
    sources += ["src/nearlink_freeze_utils.cpp"]
    external_deps += [ "resource_schedule_service:ressched_client" ]
  }

  if (nearlink_service_kia_enable) {
    sources += [ "src/SleKiaManager.cpp" ]
    defines += [ "NEARLINK_KIA_ENABLE" ]
    external_deps += [
      "cJSON:cjson",
      "security_guard:libsg_collect_sdk",
    ]
  }

  subsystem_name = "communication"
  part_name = "nearlink_service"
}