# Copyright (C) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../../nearlink_config.gni")

config("nearlink_dli_adapter_public_config") {
  include_dirs = [
    "include",
  ]
}

ohos_shared_library("nearlink_dli_adapter") {
  branch_protector_ret = "pac_ret"  # Enable PAC CFI
  sanitize = {
    cfi = true                             # Enable/disable control flow integrity detection
    cfi_vcall_icall_only = true            # CFI optimization, limit CFI check scope
    boundary_sanitize = true               # Enable boundary san detection
    cfi_cross_dso = true                   # Cross-SO CFI Checks
    integer_overflow = true                # Enable integer overflow detection
    ubsan = true                           # Enable some Ubsan options
    debug = false
  }

  include_dirs = [
    "include",
  ]

  cflags = [
    "-fPIC",
    "-fdata-sections",
    "-ffunction-sections",
    "-fno-asynchronous-unwind-tables",
    "-fno-unwind-tables",
    "-Os",
    "-fno-exceptions",
    "-fno-rtti",
    "-flto",
    ]

  if (build_variant == "user") {
    cflags += [ "-DIS_NL_RELEASE_VERSION" ]
  }

  cflags_cc = cflags

  ldflags = [
    "-flto",
    "-Wl,--gc-sections",
  ]

  public_configs = [ ":nearlink_dli_adapter_public_config" ]

  defines =  [
    "LOG_TAG = \"nearlink_dli_adapter\"",
    "LOG_DOMAIN = 0xD000152",
  ]

  sources = [
    "src/SleDliLayerAdapter.cpp",
    "src/SleDliCallbacks.cpp",
    "src/SleDliSnoop.cpp",
    "src/SleDliThreadUtil.cpp",
  ]

  deps = [
    "$NEARLINK_ROOT/utils:nearlink_utils",
  ]

  external_deps = [
    "c_utils:utils",
    "drivers_interface_nearlink:libnearlink_hci_proxy_1.0",
    "drivers_interface_nearlink:libnearlink_hci_proxy_1.1",
    "hdf_core:libhdi",
    "hilog:libhilog",
    "ipc:ipc_single",
    "bounds_checking_function:libsec_shared",
    "init:libbegetutil",
  ]

  external_deps += [ "ffrt:libffrt" ]

  subsystem_name = "communication"
  part_name = "nearlink_service"
}