# Copyright (C) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../../nearlink_config.gni")

config("hibox_config") {
  cflags_cc = [
    "-fPIC",
    "-Wno-unused-private-field",
    "-Wno-format-nonliteral",
    "-Wno-non-c-typedef-for-linkage",
    "-fdata-sections",
    "-ffunction-sections",
    "-fno-asynchronous-unwind-tables",
    "-fno-unwind-tables",
    "-Os",
    "-fno-exceptions",
    "-fno-rtti",
    "-flto",
  ]
}

ohos_shared_library("nearlink_hibox") {
  branch_protector_ret = "pac_ret"  # Enable PAC CFI
  # stack_protector_ret = true
  
  ldflags = [
    "-flto",
    "-Wl,--gc-sections",
  ]

  sanitize = {
      cfi = true                             # Enable/disable control flow integrity detection
      cfi_vcall_icall_only = true            # CFI optimization, limit CFI check scope
      boundary_sanitize = true               # Enable boundary san detection
      cfi_cross_dso = true                   # Cross-SO CFI Checks
      integer_overflow = true                # Enable integer overflow detection
      ubsan = true                           # Enable some Ubsan options
      debug = false
  }

  include_dirs = [
    "include",
  ]

  sources = [
    "src/hibox_audio.c",
    "src/hibox_dts.c",
    "src/hibox_hitws.c",
    "src/hibox_local.c",
    "src/hibox_pairconn.c",
    "src/hibox_process.c",
    "src/hibox_service.c",
  ]

  deps = [
    "$NEARLINK_ROOT/utils:nearlink_utils"
  ]

  external_deps = [
    "hilog:libhilog",
    "bounds_checking_function:libsec_shared",
  ]

  part_name = "nearlink_service"
  subsystem_name = "communication"
}